--- a/.github/workflows/deploy-to-existing-gcp.yml
+++ b/.github/workflows/deploy-to-existing-gcp.yml
@@ -45,24 +45,44 @@ jobs:
         id: ar
         run: |
           set -x
-          # Pick the first DOCKER repo in the project
-          line="$(gcloud artifacts repositories list --project "${GCP_PROJECT_ID}" \
+          # List all repositories to debug format
+          echo "=== All repositories ==="
+          gcloud artifacts repositories list --project "${GCP_PROJECT_ID}" || true
+          
+          # Try different format approaches
+          echo "=== Trying format: csv ==="
+          gcloud artifacts repositories list --project "${GCP_PROJECT_ID}" \
                   --filter='format=DOCKER' \
-                  --format='value(name,location)' | head -n1 || true)"
-          echo "Found line: '$line'"
-          if [[ -z "$line" ]]; then
+                  --format='csv(name,location)' | head -n2 || true
+          
+          echo "=== Trying format: table ==="
+          gcloud artifacts repositories list --project "${GCP_PROJECT_ID}" \
+                  --filter='format=DOCKER' \
+                  --format='table(name,location)' | head -n3 || true
+          
+          # Get first DOCKER repo with proper parsing
+          output="$(gcloud artifacts repositories list --project "${GCP_PROJECT_ID}" \
+                   --filter='format=DOCKER' \
+                   --format='csv(name,location)' --no-headers | head -n1 || true)"
+          echo "CSV output: '$output'"
+          
+          if [[ -z "$output" ]]; then
             echo "❌ No DOCKER Artifact Registry found in project ${GCP_PROJECT_ID}."
-            echo "Create one in Console → Artifact Registry → Repositories (format=DOCKER)."
             exit 1
           fi
-          REPO="$(echo "$line" | awk '{print $1}')"
-          REGION="$(echo "$line" | awk '{print $2}')"
+          
+          # Parse CSV format: name,location
+          REPO="$(echo "$output" | cut -d',' -f1)"
+          REGION="$(echo "$output" | cut -d',' -f2)"
+          
           echo "Parsed REPO: '$REPO'"
           echo "Parsed REGION: '$REGION'"
-          if [[ -z "$REGION" ]]; then
-            echo "❌ Failed to parse region from: '$line'"
+          
+          if [[ -z "$REGION" || -z "$REPO" ]]; then
+            echo "❌ Failed to parse repo/region from: '$output'"
             exit 1
           fi
+          
           echo "repo=$REPO" >> "$GITHUB_OUTPUT"
           echo "region=$REGION" >> "$GITHUB_OUTPUT"
 
