--- a/.github/workflows/deploy-to-existing-gcp.yml
+++ b/.github/workflows/deploy-to-existing-gcp.yml
@@ -152,9 +152,40 @@ jobs:
         id: meta
         run: |
           set -x
+          
+          echo "🔍 Debug build variables:"
+          echo "GCP_PROJECT_ID: ${GCP_PROJECT_ID}"
+          echo "APP_NAME: ${APP_NAME}"
+          echo "GITHUB_SHA: ${GITHUB_SHA}"
+          echo "AR region: ${{ steps.ar.outputs.region }}"
+          echo "AR repo: ${{ steps.ar.outputs.repo }}"
+          
+          # Validate required variables
+          if [[ -z "${GCP_PROJECT_ID}" ]]; then
+            echo "❌ ERROR: GCP_PROJECT_ID is empty"
+            exit 1
+          fi
+          if [[ -z "${APP_NAME}" ]]; then
+            echo "❌ ERROR: APP_NAME is empty"
+            exit 1
+          fi
+          if [[ -z "${{ steps.ar.outputs.region }}" ]]; then
+            echo "❌ ERROR: AR region is empty"
+            exit 1
+          fi
+          if [[ -z "${{ steps.ar.outputs.repo }}" ]]; then
+            echo "❌ ERROR: AR repo is empty"
+            exit 1
+          fi
+          
           AR_HOST="${{ steps.ar.outputs.region }}-docker.pkg.dev"
           IMAGE_BASE="${AR_HOST}/${GCP_PROJECT_ID}/${{ steps.ar.outputs.repo }}/${APP_NAME}"
           IMAGE_URI="${IMAGE_BASE}:${GITHUB_SHA}"
+
+          echo "🔍 Computed values:"
+          echo "AR_HOST: ${AR_HOST}"
+          echo "IMAGE_BASE: ${IMAGE_BASE}"
+          echo "IMAGE_URI: ${IMAGE_URI}"
 
           echo "Building ${IMAGE_URI}"
           docker build \
@@ -181,6 +212,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: 🔍 Debug job outputs
+        run: |
+          echo "🔍 Outputs from build-and-push job:"
+          echo "image_uri: ${{ needs.build-and-push.outputs.image_uri }}"
+          echo "ar_host: ${{ needs.build-and-push.outputs.ar_host }}"
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
